# pfund

./: .env.paper.example  .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  compose.yml  docker-compose.yml  logging.yml  pixi.toml  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-jupyterbook.yml  deploy.yml  release.yml
afterpython/: .editorconfig  .pre-commit-config.yaml  afterpython.toml  authors.yml  cz.toml  jupytext.toml  justfile  ruff.toml
afterpython/_website/: .gitignore  .prettierrc  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  vite.config.ts
afterpython/blog/: index.md  myst.yml
afterpython/doc/: index.md  myst.yml
afterpython/docs_OLD/: _config.yml  _toc.yml  api-reference.md  build.sh  myst.yml  overview.md
afterpython/example/: index.md  myst.yml
afterpython/guide/: index.md  myst.yml
afterpython/tutorial/: index.md  myst.yml
docs/: .$ZeroMQ.drawio.bkp  ZeroMQ.drawio  ZeroMQ_DEPRECATED.drawio  _config.yml  _toc.yml  api-reference.md  build.sh  markdown.md  notebooks.ipynb  overview.md
docs/comparisons/: index.md
docs/concepts/: index.md
docs/examples/: index.md
docs/getting-started/: basics.md  conventions.md  index.md  installation.md  setup.md
docs/how-to-guides/: index.md
docs/images/: ZeroMQ.drawio
docs/source/: conf.py  index.rst
docs/tutorials/: index.md
pfund/: CONTRIBUTING.md  __init__.py  __main__.py  _typing.py  actor_proxy.py  adapter.py  aliases.py  analyzer.py  backtest_history.py  config.py  config_handler.py  databoy.py  errors.py  external_listeners.py  git_controller.py  investment_profile.py  main.py  messenger.py  parser.py  portfolio.py  risk_guard.py  risk_monitor.py  typing.py  universe.py  zeromq.py
pfund/_backtest/: backtest_mixin.py  narwhals_mixin.py  numba_kernel.py  pandas.py  polars.py  portfolio.py  typing.py
pfund/_logging/: __init__.py  buffer.py  config.py  formatter.py  handlers.py  temporary_logger.py  zmq_pub_handler.py
pfund/accounts/: __init__.py  account_base.py  account_crypto.py  account_ib.py  account_ibkr.py  account_simulated.py
pfund/backtesting/: backtest_mixin.py  pandas.py
pfund/balances/: __init__.py  balance_base.py  balance_crypto.py  balance_ib.py
pfund/brokers/: __init__.py  broker_backtest.py  broker_base.py  broker_crypto.py  broker_dapp.py  broker_defi.py  broker_live.py  broker_simulated.py  broker_trade.py  order_manager.py  portfolio_manager.py
pfund/cli/: __init__.py  main.py
pfund/components/: __init__.py  actor_proxy.py  component_mixin.py  mixin.py
pfund/config/: config.py  configuration.py  logging.yml
pfund/const/: __init__.py  _zmq_routes.py  aliases.py  common.py  commons.py  paths.py
pfund/data_generators/: base.py  random_walk.py
pfund/data_tools/: data_config.py  data_tool_backtest.py  data_tool_base.py  data_tool_pandas.py  data_tool_polars.py  dataset.py
pfund/datas/: __init__.py  data_bar.py  data_base.py  data_config.py  data_market.py  data_quote.py  data_tick.py  data_time_based.py  databoy.py  orderbook.py  resolution.py  storage_config.py  timeframe.py
pfund/engines/: __init__.py  backtest_engine.py  backtest_engine_settings.py  base_engine.py  base_engine_settings.py  engine_context.py  engine_proxy.py  meta_engine.py  risk_engine.py  sandbox_engine.py  test_engine.py  trade_engine.py  trade_engine_settings.py  train_engine.py
pfund/enums/: __init__.py  artifact_type.py  asset_type.py  backtest_mode.py  broker.py  channel.py  component.py  component_type.py  crypto_exchange.py  data_channel.py  data_tool.py  database.py  env.py  event.py  month_code.py  option_type.py  order_side.py  order_status.py  order_type.py  product_type.py  run_mode.py  run_stage.py  signal.py  source_type.py  time_in_force.py  trading_venue.py
pfund/exchanges/: __init__.py  exchange_base.py  rest_api_base.py  ws_api_base.py
pfund/features/: feature_base.py
pfund/indicators/: __init__.py  indicator_base.py  ta_indicator.py  talib_indicator.py
pfund/logging/: __init__.py  config.py  filters.py  handlers.py
pfund/managers/: __init__.py  base_manager.py  connection_manager.py  data_manager.py  order_manager.py  portfolio_manager.py  risk_manager.py  strategy_manager.py
pfund/messaging/: __init__.py  _zmq_routes.py  basemq.py  localmq.py  messenger.py  zeromq.py
pfund/mixins/: backtest.py  backtest_mixin.py  component_mixin.py  trade_mixin.py
pfund/models/: __init__.py  dataset_splitter.py  model_backtest.py  model_base.py  model_meta.py  pytorch_model.py  sklearn_model.py
pfund/orders/: __init__.py  order_base.py  order_crypto.py  order_ib.py  order_ibkr.py  order_statuses.py  order_time_in_force.py
pfund/plogging/: __init__.py  config.py  handlers.py
pfund/portfolios/: __init__.py  base_portfolio.py  crypto_portfolio.py  defi_portfolio.py  portfolio.py  portfolio_defi.py  portfolio_tradfi.py  tradfi_portfolio.py
pfund/positions/: __init__.py  position_base.py  position_crypto.py  position_ib.py
pfund/products/: __init__.py  product_base.py  product_basis.py  product_bybit.py  product_crypto.py  product_crypto_cefi.py  product_derivative.py  product_future.py  product_fx.py  product_ib.py  product_ibkr.py  product_option.py  product_stock.py  product_tradfi.py
pfund/proxies/: actor_proxy.py  engine_proxy.py
pfund/settings/: __init__.py  backtest_engine_settings.py  trade_engine_settings.py
pfund/stores/: base_data_store.py  market_data_store.py  trading_store.py
pfund/strategies/: __init__.py  _dummy_strategy.py  allocation_strategy.py  diversification_strategy.py  hedging_strategy.py  optimization_strategy.py  portfolio_strategy.py  rebalancing_strategy.py  strategy_backtest.py  strategy_base.py  strategy_meta.py
pfund/types/: backtest.py  common_literals.py  core.py  data.py  data_tool.py  dataframes.py  literals.py
pfund/typing/: __init__.py  backtest.py  backtest_kwargs.py  core.py  data_kwargs.py  data_tool.py
pfund/universes/: __init__.py  base_universe.py  crypto_universe.py  defi_universe.py  (+5 more)
tests/: conftest.py
(+639 files in other folders)
