[project]
name = "pfund"
version = "0.0.2"
description = "A Complete Algo-Trading Framework for Machine Learning, enabling trading across TradFi, CeFi and DeFi. Supports Vectorized and Event-Driven Backtesting, Paper and Live Trading"
license = "Apache-2.0"
authors = [
    {name = "Stephen Yau", email = "softwareentrepreneer+pfund@gmail.com"}
]
readme = "README.md"
keywords = ["trading", "algo-trading", "stocks", "cryptos", "cryptocurrencies", "TradFi", "CeFi", "DeFi", "portfolio management", "investment", "backtesting", "machine learning"]
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.11"
dependencies = [
    "pfeed>=0.0.5",
    "pfolio>=0.0.2",
    "mtflow>=0.0.1.dev2",
    "rich>=13.9.4",
    "click>=8.1.8",
    "trogon>=0.6.0",
    "platformdirs>=4.3.8",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "httpx>=0.28.1",
    "websockets>=15.0.1",
    "scikit-learn>=1.7.2",
    "numba>=0.61.2",
    "pfund-ibapi>=10.39.1",
    # "python-telegram-bot>=22.3.0",
]

[project.optional-dependencies]
ta = ['ta-lib>=0.6.7']
jupyter = ["pfund-plot[jupyter]>=0.0.1.dev2"]

[project.scripts]
pfund = "pfund.main:run_cli"

[project.urls]
homepage = "https://pfund.ai"
repository = "https://github.com/PFund-Software-Ltd/pfund"
documentation = "https://pfund-docs.pfund.ai"

[dependency-groups]
dev = [
    "pybit>=5.11.0",
    "torch>=2.8.0",
    "ruff>=0.13.0",
    "pre-commit>=4.3.0",
    "commitizen>=4.9.1",
    "python-semantic-release>=10.4.1",
    "pdoc>=15.0.4",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pfund"
module-root = ""

[tool.uv.sources]
pfeed = { path = "../pfeed", editable = true }
pfolio = { path = "../pfolio", editable = true }
pfund-plot = { path = "../pfund-plot", editable = true }
mtflow = { path = "../mtflow", editable = true }

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# [tool.hatch.build.targets.sdist]
# include = ['/pfund', 'logging.yml', 'docker-compose.yml']

# [tool.hatch.build.targets.wheel]
# include = ['/pfund', 'logging.yml', 'docker-compose.yml']
