[project]
name = "pfund"
version = "0.0.2"
description = "A Complete Algo-Trading Framework for Machine Learning, enabling trading across TradFi, CeFi and DeFi. Supports Vectorized and Event-Driven Backtesting, Paper and Live Trading"
license = "Apache-2.0"
authors = [
    {name = "Stephen Yau", email = "softwareentrepreneer+pfund@gmail.com"}
]
readme = "README.md"
keywords = ["trading", "algo-trading", "stocks", "cryptos", "cryptocurrencies", "TradFi", "CeFi", "DeFi", "portfolio management", "investment", "backtesting", "machine learning"]
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
    "pfeed[duckdb]>=0.0.5",
    "pfolio>=0.0.2",
    "pfund-kit>=0.1.3",
    "httpx>=0.28.1",
    "websockets>=15.0.1",
    "numba>=0.63.1",
]

[project.optional-dependencies]
ibkr = ["pfund-ibapi>=10.42.1"]
ta-lib = ["ta-lib>=0.6.4"]

[project.scripts]
pfund = "pfund.__main__:run_cli"

[project.entry-points."pfund_shell.commands"]
pfund = "pfund.cli:pfund_group"

[project.urls]
homepage = "https://pfund.ai"
repository = "https://github.com/PFund-Software-Ltd/pfund"
documentation = "https://pfund-docs.pfund.ai"

[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"

[tool.pyright]
reportAny = false
reportExplicitAny = false
reportIncompatibleMethodOverride = false
reportUnreachable = false
reportRedeclaration = false
reportImportCycles = false
reportPrivateUsage = false
reportUnusedCallResult = false
reportImplicitOverride = false
reportUnnecessaryIsInstance = false

[tool.uv.build-backend]
module-name = "pfund"
module-root = ""

[tool.uv.sources]
pfeed = { path = "../pfeed", editable = true }
pfolio = { path = "../pfolio", editable = true }
pfund-plot = { path = "../pfund-plot", editable = true }
mtflow = { path = "../mtflow", editable = true }
pfund-kit = { path = "../pfund-kit", editable = true }

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# [tool.hatch.build.targets.sdist]
# include = ['/pfund', 'logging.yml', 'docker-compose.yml']

# [tool.hatch.build.targets.wheel]
# include = ['/pfund', 'logging.yml', 'docker-compose.yml']
