[project]
name = "pfund"
version = "0.0.19"
description = "A Complete Algo-Trading Framework for Machine Learning, enabling trading across TradFi, CeFi and DeFi. Supports Vectorized and Event-Driven Backtesting, Paper and Live Trading"
license = "Apache-2.0"
authors = [
    {name = "Stephen Yau", email = "softwareentrepreneer+pfund@gmail.com"}
]
readme = "README.md"
keywords = ["trading", "algo-trading", "stocks", "cryptos", "cryptocurrencies", "TradFi", "CeFi", "DeFi", "backtesting", "machine learning"]
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
    "pfund-kit>=0.1.11",
    'pfeed>=0.0.16',
    "apscheduler>=3.11.2",
    "niquests>=3.19.1",
    "websockets>=16.0.0 ; sys_platform != 'emscripten'",
]

[project.optional-dependencies]
core = [
    "numba>=0.65.1 ; sys_platform != 'emscripten'",
    'pfeed[core,duckdb,yfinance]>=0.0.16',
    'pfolio>=0.0.4',
    'pfund-plot[marimo]>=0.0.5',
    # TODO: enable when ready
    # 'mtflow>=0.0.1.dev2 ; sys_platform != "emscripten"',
]
ibkr = ["pfund-ibapi>=10.47.1"]
alpaca = ["alpaca-py>=0.43.4"]
hyperliquid = ["hyperliquid-python-sdk>=0.24.0"]
ta-lib = ["ta-lib>=0.6.8"]
# TODO: enable when ready
# optuna = ["mtflow[optuna]>=0.0.1.dev2]
# botorch = ["mtflow[botorch]>=0.0.1.dev2]
sklearn = [
    "joblib>=1.5.3",
    "scikit-learn>=1.9.0",
]
torch = [
    "torch>=2.12.1",
    "safetensors>=0.8.0",
]
jax = [
    "jax>=0.10.2",
    "safetensors>=0.8.0",
    "orbax-checkpoint>=0.12.0",
]

[project.scripts]
pfund = "pfund.__main__:run_cli"

[project.entry-points."pfund_shell.commands"]
pfund = "pfund.cli:pfund_group"

[project.urls]
homepage = "https://pfund.pfund.ai"
repository = "https://github.com/PFund-Software-Ltd/pfund"
documentation = "https://pfund.pfund.ai/doc"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[tool.pyright]
# typeCheckingMode = "basic"
reportAny = false
reportExplicitAny = false
reportIncompatibleMethodOverride = false
reportUnreachable = false
reportRedeclaration = false
reportImportCycles = false
reportPrivateUsage = false
reportUnusedCallResult = false
reportImplicitOverride = false
reportMissingTypeStubs = false
reportUnannotatedClassAttribute = false
reportUnnecessaryIsInstance = false

[tool.uv.build-backend]
module-name = "pfund"
module-root = "src"

[tool.pytest.ini_options]
markers = [
    "smoke: Run the most important tests",
]
addopts = [
    "--strict-markers",
]
